--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -32,7 +32,16 @@
         </div>
       </div>
     </nav>
-
+    <!-- For debugging what is received from the forms - to be deleted -->
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul>
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
   </body>
 </html>
