--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,11 +6,16 @@
     <div class='jumbotron' background-position='center'>
       <form class='form-horizontal' action='' method='post' name='login' width='50%'>
         {{ form.hidden_tag() }}
-          Please enter your OpenId:
-          {{ form.openid(class_='form-control', placeholder='Open Id') }}
-          {{ form.remember_me }} Remember Me
-          {{ form.email(class_='form-control', placeholder='Email address', autofocus=True) }}
-          {{ form.password(class_='form-control', placeholder='Password') }}
+        {{ form.csrf_token }}
+        {{ form.email(class_='form-control', placeholder='Email address', autofocus=True) }}
+        {% for error in form.email.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        {{ form.password(class_='form-control', placeholder='Password') }}
+        {% for error in form.password.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+        {{ form.remember_me }} Remember Me
         <!-- <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
