--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav class='navbar navbar-default'>
-      <div class='container-fluid'>
+      <div class='container'>
         <div class='navbar-header'>
           <a href='/' class='navbar-brand'>Daily Metrics</a>
         </div>
