--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% block content %}
   {% for metric in metrics %}
-  <div>
+  <div class='container'>
     <p><h4>{{ metric.name }}</h4></p>
     <p>{{ metric.text }}</p>
   </div>
