--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -22,7 +22,7 @@
               <p class='navbar-text'>Welcome, {{ user.name }}</p>
             </li>
             <li class='nav-item'>
-              <a href=# class='nav-link'>Sign out</a>
+              <a href='/logout' class='nav-link'>Sign out</a>
             </li>
           {% else %}
             <li><a href='/login' class='nav-link'>Login</a></li>
