--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav class='navbar navbar-default'>
-      <div class='container'>
+      <div class='container-fluid'>
         <div class='navbar-header'>
           <a href='/' class='navbar-brand'>Daily Metrics</a>
         </div>
@@ -37,7 +37,9 @@
       {% if messages %}
         <ul>
           {% for message in messages %}
-          <li>{{ message }}</li>
+          <div class='alert alert-info' role='alert'>
+            <li>{{ message }}</li>
+          </div>
           {% endfor %}
         </ul>
       {% endif %}
