--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'header.html' %}
 {% block content %}
-  <div class='container'>
+  <div class='container-fluid' width='80%'>
     <div class='jumbotron'>
       <p><h3>Daily metrics</h3></p>
       <p>Sign up to record your metrics or login to view your existing metrics</p>
