--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,8 @@
 <!-- extend from header -->
 {% extends 'header.html' %}
 {% block content %}
-  <div class='container' width='500px'>
-    <h3>Sign in</h3>
+  <div class='container'>
+    <h3>Log in</h3>
     <div class='jumbotron' background-position='center' padding-right='100px' padding-left=100px>
       <form class='form-signin' action='' method='post' name='login'>
         {{ form.hidden_tag() }}
@@ -21,7 +21,7 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
         <button id="btnSignIn" class="btn btn-lg btn-primary btn-block" type="submit" value='Sign In'>Sign in</button> -->
-        <input type='submit' class='btn btn-lg btn-primary btn-block' value='Sign In'>
+        <input type='submit' class='btn btn-lg btn-primary btn-block' value='Log in'>
       </form>
     </div>
   </div>
