--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,10 @@
 <!-- extend from header -->
 {% extends 'header.html' %}
 {% block content %}
-  <div class='container' width='500px'>
+  <div class='container'>
     <h3>Register User</h3>
     <div class='jumbotron' background-position='center' padding-right='100px' padding-left=100px>
-      <form class='form-signin' action='' method='post' name='login'>
+      <form class='form-signin' action='' method='post' name='register'>
         {{ form.hidden_tag() }}
         {{ form.csrf_token }}
         {{ form.email(class_='form-control', placeholder='Email address', autofocus=True) }}
@@ -15,7 +15,7 @@
         {% for error in form.password.errors %}
           <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
-        <input type='submit' class='btn btn-lg btn-primary btn-block' value='Sign In'>
+        <input type='submit' class='btn btn-lg btn-primary btn-block' value='Register'>
       </form>
     </div>
   </div>
