--- a/app/templates/view_records.html
+++ b/app/templates/view_records.html
@@ -1,21 +1,18 @@
 {% extends 'header.html' %}
 {% block content %}
   <div class='container-fluid' width='80%'>
-    <div class='jumbotron'>
-      <a href="{{ url_for('add_metric') }}" type="button" class="btn btn-primary">Add Metric</a>
-    </div>
     <div class='container'>
-      <h3>Metrics</h3>
-      {% for metric in metrics %}
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3 class="panel-title">{{ metric.name }}</h3>
         </div>
         <div class="panel-body">
-          <a href="{{ url_for('view_records', metric_id=metric.id) }}" type="button" class="btn btn-primary">View Records</a>
+          {% for record in records %}
+            {{ record.value }}
+            {{ record.date }}
+          {% endfor %}
         </div>
       </div>
-      {% endfor %}
     </div>
   </div>
 {% endblock %}
